# CapiBex

./: .gitignore  Cargo.toml  README.md  TODO.md  capibex.pyi  pyproject.toml
.github/workflows/: workflow.yaml
src/: dedup.rs  fastx.rs  filter.rs  lib.rs  pyproject.toml  sample.rs  seq_utils.rs  translate.rs
src/python/: polars_fastx.py  tests.py
