[package]
name = "CapiBex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "CapiBex"
crate-type = ["cdylib"]

[dependencies]
needletail = "0.6.3"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
rand = "0.9.1"
rayon = "1.10.0"


[build-dependencies]
pyo3-build-config = "0.25.1"

[dev-dependencies]
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
